[gd_scene load_steps=10 format=3 uid="uid://cj57mehbbh75a"]

[ext_resource type="Script" path="res://scripts/entities/shared/entity.gd" id="1_0buw3"]
[ext_resource type="Script" path="res://scripts/ui/healthbar/healthbar.gd" id="2_jpqu3"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/timers_component.gd" id="3_pe0ah"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_anim_component.gd" id="5_s33g6"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_movement_component.gd" id="6_ajn7j"]
[ext_resource type="Script" path="res://scripts/fsm/finite_state_machine.gd" id="7_tquuo"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_idle.gd" id="8_n2vnt"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_walk.gd" id="9_u4byy"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_death.gd" id="10_p4ymt"]

[node name="Entity" type="CharacterBody2D"]
script = ExtResource("1_0buw3")

[node name="TimersComponent" type="Node" parent="."]
script = ExtResource("3_pe0ah")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0
script = ExtResource("2_jpqu3")

[node name="EntityAnimationComponent" type="Node" parent="."]
script = ExtResource("5_s33g6")

[node name="EntityMovementComponent" type="Node" parent="."]
script = ExtResource("6_ajn7j")

[node name="FSM" type="Node2D" parent="."]
script = ExtResource("7_tquuo")

[node name="EntityIdleState" type="Node2D" parent="FSM"]
script = ExtResource("8_n2vnt")

[node name="EntityWalkState" type="Node2D" parent="FSM"]
script = ExtResource("9_u4byy")

[node name="EntityDeathState" type="Node2D" parent="FSM"]
script = ExtResource("10_p4ymt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
