[gd_scene load_steps=6 format=3 uid="uid://dtysoabuc2buy"]

[ext_resource type="Script" path="res://scripts/ui/healthbar/healthbar.gd" id="1_qt3g6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nn5al"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wprjj"]
bg_color = Color(0.215686, 0.552941, 0.482353, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w1r5q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idcov"]
bg_color = Color(0.92549, 0.937255, 0.956863, 1)

[node name="Healthbar" type="ProgressBar"]
z_index = 1
offset_right = 21.0
offset_bottom = 3.0
theme_override_styles/background = SubResource("StyleBoxEmpty_nn5al")
theme_override_styles/fill = SubResource("StyleBoxFlat_wprjj")
value = 60.0
show_percentage = false
script = ExtResource("1_qt3g6")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_w1r5q")
theme_override_styles/fill = SubResource("StyleBoxFlat_idcov")
value = 80.0
show_percentage = false

[node name="UpdateBarTimer" type="Timer" parent="."]
one_shot = true

[node name="HideBarTimer" type="Timer" parent="."]
